package com.b3.dto;

public class WorkoutDTO {
    
}
