package com.b3.model;

public class Brick {
    
}
