erDiagram
    UserProfile ||--|| BehaviorProfile : has
    UserProfile ||--o{ WorkoutSession : completes
    UserProfile ||--o{ Brick : lays
    UserProfile ||--o{ DailyLog : logs
    UserProfile ||--o{ BrixMessage : receives
    UserProfile ||--o{ Milestone : achieves
    
    Workout ||--o{ WorkoutSession : performed_in
    Workout ||--o{ WorkoutExercise : contains
    Exercise ||--o{ WorkoutExercise : included_in
    WorkoutSession ||--o| Brick : generates

    UserProfile {
        BIGINT profile_id PK
        VARCHAR display_name
        INT age
        VARCHAR fitness_level
        VARCHAR primary_goal
        VARCHAR equipment
        INT weekly_goal_days
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    BehaviorProfile {
        BIGINT behavior_id PK
        BIGINT profile_id FK
        VARCHAR preferred_workout_time
        VARCHAR current_tone
        INT consecutive_days
        INT longest_streak
        INT total_bricks_laid
        DOUBLE consistency_score
        DATE last_workout_date
        VARCHAR motivation_state
        TIMESTAMP updated_at
    }

    Workout {
        BIGINT workout_id PK
        VARCHAR workout_name
        TEXT description
        VARCHAR category
        VARCHAR difficulty_level
        INT estimated_duration
        VARCHAR equipment_required
        TIMESTAMP created_at
    }

    Exercise {
        BIGINT exercise_id PK
        VARCHAR exercise_name
        TEXT description
        VARCHAR muscle_group
        VARCHAR video_url
        TIMESTAMP created_at
    }

    WorkoutExercise {
        BIGINT workout_exercise_id PK
        BIGINT workout_id FK
        BIGINT exercise_id FK
        INT order_index
        INT sets
        INT reps
        INT duration_seconds
    }

    WorkoutSession {
        BIGINT session_id PK
        BIGINT profile_id FK
        BIGINT workout_id FK
        TIMESTAMP start_time
        TIMESTAMP end_time
        VARCHAR completion_status
        INT perceived_difficulty
        TIMESTAMP created_at
    }

    Brick {
        BIGINT brick_id PK
        BIGINT profile_id FK
        BIGINT session_id FK
        DATE brick_date
        VARCHAR brick_type
        TIMESTAMP created_at
    }

    DailyLog {
        BIGINT log_id PK
        BIGINT profile_id FK
        DATE log_date
        INT energy_level
        INT stress_level
        INT sleep_quality
        VARCHAR mood
        TEXT notes
        TIMESTAMP created_at
    }

    BrixMessage {
        BIGINT message_id PK
        BIGINT profile_id FK
        TEXT message_text
        VARCHAR message_type
        VARCHAR tone
        VARCHAR context_trigger
        TIMESTAMP sent_at
    }

    Milestone {
        BIGINT milestone_id PK
        BIGINT profile_id FK
        VARCHAR milestone_name
        VARCHAR milestone_type
        INT target_value
        INT current_value
        BOOLEAN is_achieved
        TIMESTAMP achieved_at
        TIMESTAMP created_at
    }
